# cross-platform-renderer

./: CMakeLists.txt
ext/glad/: glad.c  glad.h
src/: main.cpp
